[tool.poetry]
name = "word-associations"
version = "0.1.0"
description = "Finding word associations for a given word and providing example representative words"
authors = ["Luke31 <lukas.m.schmid@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^1.5.2"
jupyterlab = "^3.5.1"
jupyter = "^1.0.0"
gensim = "^4.2.0"
SudachiPy = "^0.6.6"
SudachiDict-core = "^20221021"
goslate = "^1.5.4"
jamdict = "^0.1a11"
jamdict-data = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
